--- a/src/components/Layout/font.css
+++ b/src/components/Layout/font.css
@@ -23,49 +23,65 @@
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/1da05b/0000000000000000000132df/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/1da05b/0000000000000000000132df/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/1da05b/0000000000000000000132df/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
-font-style:normal;font-weight:400;
+font-style:normal;
+font-display:swap;
+font-weight:400;
 }
 
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/32d3ee/0000000000000000000132e0/27/l?subset_id=2&fvd=i4&v=3") format("woff2"),url("https://use.typekit.net/af/32d3ee/0000000000000000000132e0/27/d?subset_id=2&fvd=i4&v=3") format("woff"),url("https://use.typekit.net/af/32d3ee/0000000000000000000132e0/27/a?subset_id=2&fvd=i4&v=3") format("opentype");
-font-style:italic;font-weight:400;
+font-style:italic;
+font-display:swap;
+font-weight:400;
 }
 
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/8f4e31/0000000000000000000132e3/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"),url("https://use.typekit.net/af/8f4e31/0000000000000000000132e3/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"),url("https://use.typekit.net/af/8f4e31/0000000000000000000132e3/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
-font-style:normal;font-weight:700;
+font-style:normal;
+font-display:swap;
+font-weight:700;
 }
 
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/383ab4/0000000000000000000132e4/27/l?subset_id=2&fvd=i7&v=3") format("woff2"),url("https://use.typekit.net/af/383ab4/0000000000000000000132e4/27/d?subset_id=2&fvd=i7&v=3") format("woff"),url("https://use.typekit.net/af/383ab4/0000000000000000000132e4/27/a?subset_id=2&fvd=i7&v=3") format("opentype");
-font-style:italic;font-weight:700;
+font-style:italic;
+font-display:swap;
+font-weight:700;
 }
 
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/333a5f/0000000000000000000132db/27/l?subset_id=2&fvd=n1&v=3") format("woff2"),url("https://use.typekit.net/af/333a5f/0000000000000000000132db/27/d?subset_id=2&fvd=n1&v=3") format("woff"),url("https://use.typekit.net/af/333a5f/0000000000000000000132db/27/a?subset_id=2&fvd=n1&v=3") format("opentype");
-font-style:normal;font-weight:100;
+font-style:normal;
+font-display:swap;
+font-weight:100;
 }
 
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/2f8f3d/0000000000000000000132dd/27/l?subset_id=2&fvd=n3&v=3") format("woff2"),url("https://use.typekit.net/af/2f8f3d/0000000000000000000132dd/27/d?subset_id=2&fvd=n3&v=3") format("woff"),url("https://use.typekit.net/af/2f8f3d/0000000000000000000132dd/27/a?subset_id=2&fvd=n3&v=3") format("opentype");
-font-style:normal;font-weight:300;
+font-style:normal;
+font-display:swap;
+font-weight:300;
 }
 
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/d8f71f/0000000000000000000132e1/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"),url("https://use.typekit.net/af/d8f71f/0000000000000000000132e1/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"),url("https://use.typekit.net/af/d8f71f/0000000000000000000132e1/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
-font-style:normal;font-weight:500;
+font-style:normal;
+font-display:swap;
+font-weight:500;
 }
 
 @font-face {
 font-family:"brandon-grotesque";
 src:url("https://use.typekit.net/af/031bc7/0000000000000000000132e5/27/l?subset_id=2&fvd=n9&v=3") format("woff2"),url("https://use.typekit.net/af/031bc7/0000000000000000000132e5/27/d?subset_id=2&fvd=n9&v=3") format("woff"),url("https://use.typekit.net/af/031bc7/0000000000000000000132e5/27/a?subset_id=2&fvd=n9&v=3") format("opentype");
-font-style:normal;font-weight:900;
+font-style:normal;
+font-display:swap;
+font-weight:900;
 }
 
 .tk-brandon-grotesque { font-family: "brandon-grotesque",sans-serif; }
